# SFMLStatic

./: CMakeLists.txt  main.cpp
cmake_modules/: FindSFML.cmake
